<?xml version="1.0"?>
<package format="2">
  <name>kdl_dynamics</name>
  <version>0.0.0</version>
  <description>The kdl_dynamics package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>kdl_parser</build_depend>
  <exec_depend>kdl_parser</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>

  </export>
</package>
