<?xml version="1.0"?>
<package format="2">
  <name>kuka_controllers</name>
  <version>0.0.0</version>
  <description>The kuka_controllers package</description>

  <maintainer email="roman@todo.todo">roman</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>angles</depend>
  <depend>controller_interface</depend> 
  <depend>control_msgs</depend> 
  <depend>control_toolbox</depend> 
  <depend>realtime_tools</depend> 
  <depend>urdf</depend> 
  <depend>roscpp</depend> 
  <depend>forward_command_controller</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen</depend>
  <depend>kdl_parser</depend>
  <depend>message_runtime</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf_conversions</depend>
  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <build_depend>orocos_kdl</build_depend>
  <exec_depend>orocos_kdl</exec_depend>
  <build_depend>message_generation</build_depend>
  
  <test_depend>rostest</test_depend>
  <test_depend>gtest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <controller_interface plugin="${prefix}/kuka_controllers_plugins.xml" />
  </export>
</package>
